add the labels for men, women and children and the see all products buttons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
     <header>
-    <div class= "topnav" Id= "mytopnav">
+
+    <div class="topnav" Id="mytopnav">
        <a href="#" class="active">
         <img src="assets\logo\logo.png" </a>
         <div class="inactive">
@@ -30,10 +31,26 @@
         <p>We understand that you need to look good and feel great.<br> It all starts with what you are wearing</p>
     </div>
     <img id="mouse_click" src="assets\mouse_click.png" alt="mouse_click">
-
-
+    
     </header>
 
+    <div class="check">
+        <label class="container">MEN
+          <input type="checkbox" checked="checked">
+          <span class="checkmark"></span>
+        </label>
+
+        <label class="container">WOMEN
+          <input type="checkbox" checked>
+          <span class="checkmark"></span>  
+        </label>
+ 
+        <label class="container">CHILDREN
+           <input type="checkbox">
+           <span class="checkmark"></span>
+        </label>
+        <button class="button">SEE ALL PRODUCTS</button>
+    </div>
 
 
 
