add products for men images

--- a/index.html
+++ b/index.html
@@ -52,8 +52,31 @@
         <button class="button">SEE ALL PRODUCTS</button>
     </div>
 
+    <div class="products">
+      <div id="line">
+          <p>MEN
+              <hr>
+          </p>
 
+      </div>
 
+    </div>
+<div class="products">
+    <p>SIZE</p>
+    <img src="assets\products\tshirt-men.png" alt="T-shirt">
+    <P>T-SHIRT</P>
+</div>
 
+<div class="products">
+    <p>SIZE</p>
+    <img src="assets\products\pants.png" alt="Pants">
+    <p>PANTS FORCLAZ</p>
+</div>
+
+<div class="products">
+    <p>SIZE</p>
+    <img src="assets\products\backpack.png" alt="backpack">
+    <p>BACKPACK</p>
+</div>
 
 </body>
