add products for women images

--- a/index.html
+++ b/index.html
@@ -79,4 +79,39 @@
     <p>BACKPACK</p>
 </div>
 
+<div class="products">
+    <div id="line">
+        <p>WOMEN
+            <hr>
+        </p>
+
+    </div>
+
+  </div>
+<div class="products">
+  <p>SIZE</p>
+  <img src="assets\products\giacket.png" alt="GIACKET">
+  <P>GIACKET</P>
+</div>
+
+<div class="products">
+  <p>SIZE</p>
+  <img src="assets\products\trekkingshoes.png" alt="TREKKING SHOES">
+  <p>TREKKING SHOES</p>
+</div>
+
+<div class="products">
+  <p>SIZE</p>
+  <img src="assets\products\tshirt_ladies.png" alt="T-SHIRT">
+  <p>T-SHIRT</p>
+</div>
+
+
+
+
+
+
+
+
+</html>
 </body>
