--- a/index.html
+++ b/index.html
@@ -106,9 +106,25 @@
   <p>T-SHIRT</p>
 </div>
 
+<div class="hero">
+    <fieldset>
+        <legend>ABOUT US</legend>
+        <p>This is where high-fashion clothing is <br>designed and crafted from the heart by <br> an amazing team of craftsmen and <br> designers who understand what fashion <br> is. </p>
+    </fieldset>
 
+</div>
 
+<div class="twitter">
+    <p><img src="assets\social_icons\twitter_bird.png" alt="Twitter-bird">  "SALE:Buy anything for 45% off. Use the promo CODE YOLOMY45 when you buy items"</p>
+</div>
 
+<footer>
+    <div class="column">
+        <h1>YOLOMY</h1>
+        <h6>WE ARE YOLOMY-WE UNDERSTAND <br> FASHION AND STYLE. WE CRAFT OUR <br> PRODUCTS WITH LOVE AND DILIGENCE.</h6>
+
+    </div>
+</footer>
 
 
 
