--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
     
 </div>
 <div class="column">
-    <p>CREDIT</p>
+    <p>CREDIT | PRIVACY | ABOUT | CONTACT</p>
+
+    <p>Yolomy: We mean Fashion</p>
 
 </div>
 
 </footer>
 
 
-
-
-</html>
 </body>
+</html>
