add modifications css, html and css files

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css\bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/scripts.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
     <header>
@@ -109,6 +112,7 @@
 <div class="hero">
     <fieldset>
         <legend>ABOUT US</legend>
+        <a href="#"><img src="assets\backgrounds\About-Us.jpg" alt="shop"></a>
         <p>This is where high-fashion clothing is <br>designed and crafted from the heart by <br> an amazing team of craftsmen and <br> designers who understand what fashion <br> is. </p>
     </fieldset>
 
