--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
         <div class="topnav" Id="mytopnav">
             <a href="#" class="active">
-                <img src="assets\logo\logo.png"></a>
+                <img src="./assets/logo/logo.png"></a>
             <div class="inactive">
                 <a href="#">Home</a>
                 <a href="#contact">Products</a>
-                <a href="#"><img src="assets\logo\shop.png" alt="shop"></a>
+                <a href="#"><img src="./assets/logo/shop.png" alt="shop"></a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                     <i class="fa fa-bars"></i>
                 </a>
