--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h1>Our clothing, your comfort</h1>
             <p>We understand that you need to look good and feel great.<br> It all starts with what you are wearing</p>
         </div>
-        <img id="mouse_click" src="assets\mouse_click.png" alt="mouse_click">
+        <img id="mouse_click" src="./assets/mouse_click.png" alt="mouse_click">
 
     </header>
 
